crates/backyard-parser/tests/snapshots/statics__basic.snap
---
source: crates/backyard-parser/tests/statics.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: static
    items:
      - node_type: property_item
        name:
          node_type: identifier
          name: title
          loc:
            start:
              line: 1
              column: 7
              offset: 7
            end:
              line: 1
              column: 12
              offset: 12
          leadings: []
          trailings: []
        variable_type: ~
        value: ~
        loc:
          start:
            line: 1
            column: 7
            offset: 7
          end:
            line: 1
            column: 7
            offset: 7
        leadings: []
        trailings: []
      - node_type: property_item
        name:
          node_type: identifier
          name: hook_suffix
          loc:
            start:
              line: 1
              column: 15
              offset: 15
            end:
              line: 1
              column: 26
              offset: 26
          leadings: []
          trailings: []
        variable_type: ~
        value: ~
        loc:
          start:
            line: 1
            column: 15
            offset: 15
          end:
            line: 1
            column: 15
            offset: 15
        leadings: []
        trailings: []
      - node_type: property_item
        name:
          node_type: identifier
          name: current_screen
          loc:
            start:
              line: 1
              column: 29
              offset: 29
            end:
              line: 1
              column: 43
              offset: 43
          leadings: []
          trailings: []
        variable_type: ~
        value: ~
        loc:
          start:
            line: 1
            column: 29
            offset: 29
          end:
            line: 1
            column: 29
            offset: 29
        leadings: []
        trailings: []
    loc:
      start:
        line: 1
        column: 7
        offset: 7
      end:
        line: 1
        column: 44
        offset: 44
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 44
    offset: 44
leadings: []
trailings: []
