crates/backyard-parser/tests/snapshots/statics__multiple.snap
---
source: crates/backyard-parser/tests/statics.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: static
    items:
      - node_type: property_item
        name:
          node_type: identifier
          name: title
          loc:
            start:
              line: 1
              column: 7
              offset: 7
            end:
              line: 1
              column: 12
              offset: 12
          leadings: ~
          trailings: ~
        variable_type: ~
        value:
          node_type: number
          value: "1"
          loc:
            start:
              line: 1
              column: 16
              offset: 16
            end:
              line: 1
              column: 16
              offset: 16
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 7
            offset: 7
          end:
            line: 1
            column: 16
            offset: 16
        leadings: ~
        trailings: ~
      - node_type: property_item
        name:
          node_type: identifier
          name: hook_suffix
          loc:
            start:
              line: 1
              column: 19
              offset: 19
            end:
              line: 1
              column: 30
              offset: 30
          leadings: ~
          trailings: ~
        variable_type: ~
        value: ~
        loc:
          start:
            line: 1
            column: 19
            offset: 19
          end:
            line: 1
            column: 19
            offset: 19
        leadings: ~
        trailings: ~
      - node_type: property_item
        name:
          node_type: identifier
          name: current_screen
          loc:
            start:
              line: 1
              column: 33
              offset: 33
            end:
              line: 1
              column: 47
              offset: 47
          leadings: ~
          trailings: ~
        variable_type: ~
        value: ~
        loc:
          start:
            line: 1
            column: 33
            offset: 33
          end:
            line: 1
            column: 33
            offset: 33
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 7
        offset: 7
      end:
        line: 1
        column: 48
        offset: 48
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 48
    offset: 48
leadings: ~
trailings: ~
