crates/backyard-parser/tests/snapshots/statics__value.snap
---
source: crates/backyard-parser/tests/statics.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: static
    items:
      - node_type: property_item
        name:
          node_type: identifier
          name:
            - 116
            - 105
            - 116
            - 108
            - 101
          loc:
            start:
              line: 1
              column: 7
              offset: 7
            end:
              line: 1
              column: 12
              offset: 12
          leadings: ~
          trailings: ~
        variable_type: ~
        value:
          node_type: number
          value:
            - 49
          loc:
            start:
              line: 1
              column: 16
              offset: 16
            end:
              line: 1
              column: 16
              offset: 16
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 7
            offset: 7
          end:
            line: 1
            column: 16
            offset: 16
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 7
        offset: 7
      end:
        line: 1
        column: 17
        offset: 17
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 17
    offset: 17
leadings: ~
trailings: ~
